...
import com.android.solvit.ui.navigation.NavigationActions

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun RequestScreen(
    navigationActions: NavigationActions,
    screenTitle: String,
    title: String,
    onTitleChange: (String) -> Unit,
    description: String,
    onDescriptionChange: (String) -> Unit,
    typeQuery: String,
    onTypeQueryChange: (String) -> Unit,
...
              Button(
                  onClick = onSubmit,
                  modifier =
                      Modifier.fillMaxWidth()
                          .padding(start = 80.dp, end = 80.dp)
                          .height(40.dp)
                          .testTag("requestSubmit"),
                  shape = RoundedCornerShape(25.dp),
                  enabled = title.isNotBlank() && description.isNotBlank() && dueDate.isNotBlank(),
                  colors =
                      ButtonDefaults.buttonColors(
                          containerColor = Color(0xFFCA97FC),
                          disabledContainerColor = Color(0xFFDECBFC),
...
